--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2? family= Abel & family= Inter:wght@300 & display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Abel&family=Fira+Code:wght@300;400&family=Inter:wght@300&display=swap');
 *{
     padding: 0;
     margin: 0;
@@ -54,6 +54,9 @@ a:hover{
     text-decoration: none;
 }
 header{
+    text-align: center;
+    font-family: 'Fira Code', monospace;
+    font-size: 14px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -146,8 +149,8 @@ ul > li{
 }
 /* sections */
 #works, #service-area, #skills-area, #about, #main, #contact-area{
-    margin: 60px 0;
-    padding: 30px 0px;
+    margin: 70px 0;
+    padding: 35px 0px;
 } 
 .about-me{
     width: 600px;
@@ -282,9 +285,102 @@ ul > li{
     border-left: 3px solid #fabc2111;
 }
 /* esconder o conteúdo */
-.toggle{ display: none; } 
 
-.inform-skill{ display: none; }
+.wrapper{
+    max-width: 700px;
+    width: 100%;
+    margin: 60px auto;
+    padding: 25px 30px 30px 30px;
+    border-radius: 5px;
+    background: var(--cor-base);
+    box-shadow: 0px 10px 15px rgba(0,0,0,0.1);
+}
+.wrapper header{
+    font-size: 30px;
+    font-weight: 600;
+    padding-bottom: 20px;
+}
+.wrapper nav{
+    position: relative;
+    width: 80%;
+    height: 50px;
+    display: flex;
+    align-items: center;
+}
+.wrapper nav label{
+    display: block;
+    height: 100%;
+    width: 100%;
+    text-align: center;
+    line-height: 70px;
+    cursor: pointer;
+    position: relative;
+    z-index: 1;
+    color: var(--text-color-light);
+    font-size: 17px;
+    border-radius: 5px;
+    margin: 0 5px;
+    transition: all 0.3s ease;
+}
+.wrapper nav label:hover{
+    background: rgba(250, 188, 33, 0.267);
+}
+#btn-html:checked ~ nav label.home,
+#btn-css:checked ~ nav label.blog,
+#btn-js:checked ~ nav label.btn-js,
+#btn-bs:checked ~ nav label.btn-bs,
+#btn-node:checked ~ nav label.btn-node{
+    color: #fff;
+}
+nav label ion-icon{
+    font-size: 25px;
+    line-height: 15px;
+    padding-right: 7px;
+}
+nav .slider{
+    position: absolute;
+    height: 100%;
+    width: 20%;
+    left: 0;
+    bottom: 0;
+    z-index: 0;
+    border-bottom: 2px solid #fabd21;
+    transition: all 0.3s ease;
+}
+input[type="radio"]{
+    display: none;
+}
+#btn-css:checked ~ nav .slider{
+    left: 20%;
+}
+#btn-js:checked ~ nav .slider{
+    left: 40%;
+}
+#btn-bs:checked ~ nav .slider{
+    left: 60%;
+}
+#btn-node:checked ~ nav .slider{
+    left: 80%;
+}
+article .content{
+    display: none;
+}
+#btn-html:checked ~ article .content-1,
+#btn-css:checked ~ article .content-2,
+#btn-js:checked ~ article .content-3,
+#btn-bs:checked ~ article .content-4,
+#btn-node:checked ~ article .content-5{
+    display: block;
+}
+article .content .title{
+    font-size: 21px;
+    font-weight: 500;
+    margin: 30px 0 10px 0;
+}
+article .content p{
+    text-align: justify;
+}
+/* ------------------------*/
 
 .btn-skills{
     color: var(--text-color);
@@ -422,11 +518,34 @@ ul > li{
         transform: scale(.4);
     }
 }
+/* email area */
 
+.myemail{
+    width: 20px;
+    height: 300px;
+    font-family: 'Fira Code', monospace;
+    text-align: center;
+    font-size: 14px;
+    letter-spacing: 0.1em;
+    position: fixed;
+    right: 35px;
+    bottom: 45px;
+    -webkit-writing-mode: vertical-rl;
+    writing-mode: vertical-rl;
+}
+.myemail a:hover{
+    color: #fabc21b6;
+    transition: 0.30s ease;
+}
 /* rodapé */
 footer{
-    padding: 30px;
+    margin-top: 90px;
+    padding: 60px 0 30px 0;
+}
+footer p{
     text-align: center;
+    font-family: 'Fira Code', monospace;
+    font-size: 14px;
 }
 footer .rodape-layout{
     display: flex;
