--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,9 @@
   margin: 0;
   box-sizing: border-box;
 }
+html{
+  scroll-behavior: smooth;
+}
 :root {
   --color-secundary: #fabd21;
   --color-primary: hsl(0, 0%, 9%);
@@ -16,24 +19,24 @@
   --back-yellow-light: rgba(250, 188, 33, 0.562);
   --back-white-light: rgba(255, 255, 255, 0.726);
   --cor-base: rgba(153, 153, 153, 0.047);
+  --heading-font: 5rem;
+  --text-letter-font: 1.2rem;
 }
 ::selection {
   background: rgba(250, 188, 33, 0.178);
 }
 p {
-  font-size: 18px;
   color: var(--text-color-light);
+  line-height: 1.5;
 }
 body {
   width: 100%;
   height: 100%;
   color: var(--text-color);
   font-family: "Inter", "Abel", sans-serif;
+  font-size: var(--text-letter-font);
   background: var(--color-primary);
   overflow-x: hidden;
-}
-main {
-  padding: 0px 100px;
 }
 /* Barra de rolagem */
 ::-webkit-scrollbar {
@@ -142,7 +145,7 @@ ul > li {
   font-family: "Fira Code", monospace;
 }
 .sub-heading{
-  font-size: 48px;
+  font-size: 25px;
 }
 .text-chegando {
 	-webkit-animation: text-chegando 1s;
@@ -183,15 +186,45 @@ ul > li {
 /* sections */
 #works,
 #service-area,
-#skills-area,
 #about,
-#main,
 #contact-area,
 #sota-area {
   margin: 60px 0;
-  padding: 96px 0px;
+  padding: 96px 30px;
 }
 /* about-area*/
+.containerMax {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-flow: wrap row;
+}
+#main .containerMax{
+  width: 100%;
+  height: 95vh;
+  min-height: 500px;
+  background: url("../img/nicode.png") no-repeat bottom;
+  background-size: 500px;
+  background-attachment: fixed;
+  box-shadow: 4px 2px 4px var(--cor-base);
+}
+#main .containerMax .box-coluna{
+  width: 600px;
+  height: 400px;
+  padding-top: 10%;
+}
+#main .containerMax .box-coluna p{
+  font-size: 16px;
+  font-weight: 500;
+  width: 380px;
+}
+#main .containerMax .box-coluna .main-title{
+  text-align: end;
+}
+#main .containerMax .box-coluna p:nth-child(2){
+  float: right;
+  text-align: start;
+}
 .main-coluna{
   padding: 0 60px;
   display: flex;
@@ -205,10 +238,6 @@ ul > li {
 }
 .main-coluna .profile-foto{
   flex-grow: 1;
-}
-.coluna{
-  width: 600px;
-  flex-basis: 50px;
 }
 #about .content-about{
   order: 2;
@@ -310,7 +339,7 @@ ul > li {
   z-index: 2;
 }
 .arquivo {
-  font-size: 16px;
+  text-align: center;
   margin: 45px;
 }
 .main-title {
@@ -319,11 +348,12 @@ ul > li {
   width: 100%;
   margin-bottom: 25px;
 }
-.main-title span {
-  width: 600px;
+.main-title span,
+.big-heading span,
+.sub-heading span {
   color: var(--color-secundary);
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-size: 55pt;
+  font-size: 1em;
 }
 .content-columns {
   display: flex;
@@ -332,7 +362,7 @@ ul > li {
   align-items: center;
 }
 .content-columns .coluna p {
-  padding: 20px;
+  padding: 10px;
   margin: 0;
   line-height: 30px;
 }
@@ -370,25 +400,32 @@ ul > li {
 .tagCloud--item:hover{
   color: var(--back-yellow-light);
 }
-
+#skills-area{
+  height: 65vh;
+  background: rgba(0, 0, 0, 0.473);
+}
+#skills-area .main-title{
+  text-align: center;
+  padding-top: 55px;
+}
 .wrapper {
-  max-width: 600px;
+  font-size: 80px;
+  font-weight: bold;
+  text-transform: uppercase;
   width: 100%;
-  height: 400px;
   margin: auto;
   padding: 10px 30px 30px 30px;
   display: flex;
   align-items: center;
   justify-content: center;
-  border-radius: 5px;
-  background: var(--cor-base);
-  box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.1);
 }
-/* ------------------------*/
-
+.wrapper span{
+  color: var(--color-secundary);
+  filter: drop-shadow(0 0 7px var(--color-secundary));
+}
 .btn-skills {
   color: var(--text-color);
-  font-size: 14px;
+  font-size: 0.5em;
   width: 130px;
   height: 45px;
   padding: 5px;
@@ -409,38 +446,57 @@ ul > li {
 }
 .inform-skill span {
   color: #fabd21;
-  font-size: medium;
 }
 .inform-skill .text-informa {
-  font-size: 14px;
+  font-size: 0.5em;
 }
 /* projetos */
-.containerMax {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-flow: wrap row;
+#skills-area .main-title{
+  padding: 5% 0;
 }
 .project-body,
 .box-service {
-  width: 364px;
-  height: 250px;
+  text-align: start;
+  font-size: 18px;
+  letter-spacing: -1px;
+  width: 336px;
+  height: 270px;
   margin: 10px;
-  padding: 20px;
+  padding: 0 20px;
   border-radius: 5px;
   flex-basis: calc(33% -20px);
   background: var(--cor-base);
   display: flex;
+  align-items: center;
+  justify-content: center;
   flex-direction: column;
+}
+.box-service,
+.project-body{
+  transition: all 0.3s ease;
+}
+.head-box{
+  padding: 0 20px;
+  width: 100%;
+  position: relative;
+  user-select: none;
+}
+.head-box .title-project{
+  float: right;
+  line-height: 85px;
+}
+.box-service:hover{
+  transform: scale(1.05);
 }
 .box-service ion-icon {
   color: #fabd21;
-  font-size: 40px;
+  font-size: 2.5em;
   text-align: start;
   margin-bottom: 40px;
 }
 .box-service p {
   padding-top: 2px;
+  margin: 0;
 }
 .title-project {
   text-align: start;
@@ -468,60 +524,6 @@ ul > li {
   flex-direction: column;
   position: absolute;
   top: 10%;
-}
-.btn-scroll {
-  position: fixed;
-  right: 30px;
-  bottom: 50px;
-}
-#scroll-top {
-  scroll-behavior: smooth;
-}
-/* animação do cursor */
-.cursor {
-  display: none;
-  width: 30px;
-  height: 30px;
-  border: 2px solid var(--color-secundary);
-  border-radius: 50%;
-  position: absolute;
-  transform: translate(-50%, -50%);
-  transition: 200ms;
-  transition-timing-function: ease-out;
-  animation: cursoranimado 0.5s infinite alternate;
-  pointer-events: none;
-  z-index: 1000;
-}
-
-@keyframes cursoranimado {
-  from {
-    transform: scale(1);
-  }
-  to {
-    transform: scale(0.7);
-  }
-}
-
-.cursor::after {
-  content: "";
-  width: 30px;
-  height: 30px;
-  position: fixed;
-  top: -2px;
-  left: -2px;
-  border: 8px solid var(--color-secundary);
-  border-radius: 50%;
-  opacity: 0.7;
-  animation: cursoranimado2 0.5s infinite alternate;
-}
-
-@keyframes cursoranimado2 {
-  from {
-    transform: scale(1);
-  }
-  to {
-    transform: scale(0.4);
-  }
 }
 #contact-area {
   width: 100%;
@@ -556,8 +558,8 @@ ul > li {
 }
 /* rodapé */
 footer {
-  margin-top: 60px;
-  padding: 96px 0 30px 0;
+  margin-top: 15px;
+  padding: 40px 30px;
 }
 footer p {
   text-align: center;
@@ -624,7 +626,7 @@ tbody td ion-icon:hover {
   color: #fabd21;
   transition: 0.6s;
 }
-@media screen and (max-width: 992px) {
+@media (max-width: 992px) {
   main {
     width: 100%;
     overflow-x: hidden;
@@ -733,12 +735,6 @@ tbody td ion-icon:hover {
     display: flex;
     flex-direction: row;
   }
-  .project-body,
-  .box-service {
-    width: 320px;
-    display: flex;
-    flex-direction: row;
-  }
   .project-body {
     display: flex;
     flex-direction: column;
@@ -749,7 +745,16 @@ tbody td ion-icon:hover {
     flex-direction: column;
   }
 }
-@media screen and (max-width: 568px) {
+@media (max-width:690){
+  .max-width{
+    padding: 0 23px;
+  }
+  
+}
+@media (max-width: 568px) {
+  body{
+    font-size: 0.99em;
+  }
   main {
     width: 100%;
     padding: 0;
@@ -761,7 +766,14 @@ tbody td ion-icon:hover {
   .big-heading {
     font-size: 20px;
   }
+  .main-title{
+    text-align: center;
+  }
   #main {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
     margin-bottom: 40%;
     height: auto;
   }
@@ -779,22 +791,55 @@ tbody td ion-icon:hover {
   }
   #works,
   #service-area,
-  #skills-area,
   #about,
   #main,
   #contact-area,
   #sota-area{
+    padding: 0 15px;
+  }
+  #skills-area{
+    padding-top: 30px;
+  }
+  .wrapper{
+    font-size: 40px;
+  }
+  #contact-area{
+    height: auto;
+  }
+  #main .containerMax{
+    width: 100%;
+    height: auto;
+    background: none;
+  }
+  #main .containerMax .box-coluna{
+    width: 480px;
+    height: auto;
     padding: 0 20px;
+    margin: 10px 0;
+  }
+  #main .containerMax .box-coluna p{
+    width: auto;
+  }
+  #main .containerMax .box-coluna .main-title{
+    text-align: center;
+  }
+  #main .containerMax .box-coluna p:nth-child(2){
+    float: none;
+    text-align: start;
   }
   .content-columns .coluna:nth-child(1),
   .containerMax .box-service,
   .project-body, 
   .coluna,
-  .wrapper {
-    width: 450px;
+  .wrapper,
+  .max-width{
+    width: 460px;
   }
-  .main-coluna, .skills-content {
+  .main-coluna, 
+  .skills-content,
+  #main .max-width {
     display: flex;
+    justify-content: center;
     flex-direction: column;
     flex-wrap: nowrap;
   }
@@ -802,10 +847,8 @@ tbody td ion-icon:hover {
     display: flex;
     flex-direction: row;
   }
-  .project-body,
-  .box-service {
-    display: flex;
-    flex-direction: column;
+  .title-project{
+    text-align: end;
   }
   .img-user{
     width: 275px;
@@ -827,8 +870,11 @@ tbody td ion-icon:hover {
   tbody tr td:nth-child(n + 3):nth-child(-n + 4) {
     display: none;
   }
+  footer{
+    margin-top: 0;
+  }
   footer .rodape-layout {
-    font-size: 14pt;
+    margin-top: 10px;
     display: flex;
     align-items: center;
     justify-content: space-between;
